# vulkan_backend

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  common.hpp
examples/cooperative_matrix/: CMakeLists.txt  cooperative_matrix.comp  cooperative_matrix.cpp  float16.hpp  float16_t.hpp  matrix.hpp  util.hpp
examples/vector_addition/: CMakeLists.txt  Makefile  main.cpp  vector_addition.comp  vector_addition.cpp
include/vulkan_backend/: compile_shader.hpp  config.hpp  core.hpp  enums.hpp  functions.hpp  fwd.hpp  io.hpp  log.hpp  macros.hpp  structs.hpp  types.hpp  util.hpp  vk_result.hpp  vulkan_functions.hpp
include/vulkan_backend/classes/: base.hpp  gpu_resource.hpp  no_copy_no_move.hpp  structs.hpp  structure_chain.hpp
include/vulkan_backend/constants/: constants.hpp
include/vulkan_backend/defaults/: descriptor.hpp  device.hpp  image.hpp  pipeline.hpp
include/vulkan_backend/interface/: buffer.hpp  command.hpp  descriptor.hpp  device.hpp  image.hpp  instance.hpp  physical_device.hpp  pipeline.hpp  pipeline_library.hpp  queue.hpp  swapchain.hpp
include/vulkan_backend/interface/buffer/: buffer.hpp  constants.hpp  info.hpp
include/vulkan_backend/interface/command/: command.hpp  structs.hpp
include/vulkan_backend/interface/descriptor/: descriptor.hpp  info.hpp
include/vulkan_backend/interface/device/: device.hpp  info.hpp
include/vulkan_backend/interface/image/: image.hpp  info.hpp
include/vulkan_backend/interface/info/: buffer.hpp  device.hpp  image.hpp  physical_device.hpp  pipeline.hpp  pipeline_library.hpp  queue.hpp  swapchain.hpp
include/vulkan_backend/interface/instance/: info.hpp  instance.hpp
include/vulkan_backend/interface/physical_device/: info.hpp  physical_device.hpp
include/vulkan_backend/interface/pipeline/: info.hpp  pipeline.hpp  structs.hpp
include/vulkan_backend/interface/pipeline_layout/: info.hpp  pipeline_layout.hpp
include/vulkan_backend/interface/pipeline_library/: info.hpp  pipeline_library.hpp
include/vulkan_backend/interface/queue/: info.hpp  queue.hpp
include/vulkan_backend/interface/swapchain/: info.hpp  swapchain.hpp
include/vulkan_backend/structs/: command.hpp  pipeline.hpp
include/vulkan_backend/util/: algorithm.hpp  bits.hpp  conversion.hpp  enumerate.hpp  format.hpp  hash.hpp  hash_functions.hpp  make_create_info.hpp  pipeline.hpp  specialization_map.hpp  structure_chain.hpp
src/: compile_shader.cpp  compile_shader.hpp  descriptor.cpp  device.cpp  functions.cpp  io.cpp  log.cpp  macros.hpp  pipeline.cpp  util.hpp  vk_result.cpp  vma_implementation.cpp  vulkan_backend.cpp  vulkan_backend.cppm  vulkan_functions.cpp
src/algorithm/: span_contains.cpp
src/resource/: base.hpp  buffer copy 3.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  common.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_library.cpp  pipeline_library.hpp  queue.cpp  queue.hpp  swapchain.cpp  swapchain.hpp
src/util/: pipeline.cpp
